# replicator

./: .gitignore  .nycrc  README.md  package-lock.json  package.json  tsconfig.json
engine/: Cargo.toml
engine/src/: error.rs  main.rs  schema.rs  select.rs
engine/src/select/: mod.rs  scandent_processor.rs
recipe-acceptor/: .eslintrc  .pnp.js  package.json  tsconfig.json
recipe-acceptor/.yarn/: build-state.yml
recipe-acceptor/script/: test
recipe-acceptor/src/: bake.ts  elements.ts  execution.ts  node.ts  run.ts  transform-executor.ts  write-instruction.ts
recipe-acceptor/test/: basic.ts
script/: build  clean  integration-test  lint  package  test
src/: bake.ts  client.ts  node.ts  transform-executor.ts  worker-farm.d.ts  write-instruction.ts
test/functional/: cases.js
test/functional/cases/after/: out.xml  transforms.jsx
test/functional/cases/append/: in.xml  out.xml  transforms.jsx
test/functional/cases/append-text/: in.xml  out.xml  transforms.jsx
test/functional/cases/before/: out.xml  transforms.jsx
test/functional/cases/change-text/: in.xml  out.xml  transforms.jsx
test/functional/cases/collation-numbering/: actual.xml  fixtures.js  in.xml  out.xml  transforms.jsx
test/functional/cases/copy-map/: in.xml  out.xml  transforms.jsx
test/functional/cases/delete/: out.xml  transforms.jsx
test/functional/cases/inside/: out.xml  transforms.jsx
test/functional/cases/namespaces/: in.xml  out.xml  transforms.jsx
test/functional/cases/noop/: in.xml  out.xml  transforms.jsx
test/integration/: acceptor.ts
(+11 files in other folders)
