[package]
name = "replicator-engine"
version = "0.1.0"
authors = ["tomjw64 <tom.jw64@gmail.com>", "Chris Kline <ckline.tryptic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"] }
serde_json = "*"

roxmltree = { git = "https://github.com/tomjw64/roxmltree" }
scandent = { git = "https://github.com/tomjw64/scandent" }
rental = "*"
rayon = "*"
